--- a/estilos.css
+++ b/estilos.css
@@ -2,42 +2,162 @@
     border: 0;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    text-decoration: none;
 }
-header{
+:root{
+    --fuente:'Courier New', Courier, monospace;
+}
+@font-face {
+    font-family: "fuente";
+    src: url("/fonts/Kanit/Kanit.ttf");
+}
+
+.header_prinsipal{
     background-image: url(/img/header.jpg);
-    background-size: cover;
-    margin-top: -7.6%;
-    width: 100%;
-    height: 115.6vh;
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
+    height: 100vh;
+    min-height: 50vh;
+    background-position: center center;
+    background-size: cover;  
 }
-.contenedor_nav{ 
-    width: 90%;
-    margin: auto;
-    padding-top: 10rem;
+.contenedor_p{
+    max-width: 100rem;
+    margin: 0 auto;
+}
+.contenedor_header{
+    padding: 2rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-.nav{
+.contenedor_nav {
     width: 20rem;
     display: flex;
+    justify-content: space-between;
+    font-family: 'fuente';
+}
+.contenedor_nav a:hover{
+    color: rgb(89, 179, 0); 
+}
+
+.nav{
+    width: 25%;
+    display: flex;
     justify-content: space-around;
-    text-decoration: none;
     list-style: none;
     align-items: center;  
-    
+    font-size: 1.1%;
 }
+.nav li:hover{
+    color: rgb(87, 174, 0);
+}
+a{
+    color: white;
+}
+
 h1{
-    font-size: 2.5rem;
+    font-size: 2.5%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .texto_header{
-    font-size: 2rem;
-    margin: 20rem 4rem;
-    line-height: 3rem;
+    font-size: 2%;
+    margin: 20% 4%;
+    line-height: 3%;
+}
+.titulo_nosotros{
+    font-family: var(--fuente);
+    text-align: center;
+    padding: 2%;
+    font-size: 1.5%;
 }
 .nosotros{
-    width: 100%;
+    width: 90%;
+    height: 84vh;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+.article_nosotros{
+    width: 0%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    margin: 0% 3%;
+    font-family: 'fuente';
+}
+.article_nosotros p{
+    line-height: 2%;
+}
+
+.icono{
+    width: 7%;
+}
+.icono3{
+    width: 5%;
+}
+.section_depart{
+    width: 90%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+.section_depart article{
+    background-color: rgb(233, 233, 233);
+    width: 30%;
+    margin: 0% 2%;
+    height: 90vh;
+    font-family: 'fuente';
+}
+
+.img_depart{
+    width: 70%;
+}
+.section_depart h2{
+    margin-left: 1%;
+}
+
+.section_depart article p{
+    padding: 1%;
+    line-height: 2%;
+}
+.iconos_depart{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.section_depart article a{
+    background-color: rgb(172, 138, 0);
+    display: block;
+    text-align: center;
+    width: 20vh;
+    padding: 0.5%;
+    margin: 2% auto;
+}
+.p_costo{
+    color: rgb(0, 162, 0);
+}
+.h1_depart{
+    font-family: 'fuente';
+    text-align: center;
+    margin-bottom: 1%;
+    font-size: 2%;
+}
+main a:nth-child(2){
+    background-color: rgb(36, 143, 1);
+    display: block;
+    float: right;
+    padding: 0.5% 1.5%;
+    margin-right: 5%;
+    margin-top: -3%;
+}
+.header_inter{
+    background-image: url(/img/encuentra.jpg);
+    background-size: contain;
+    height: 71.2vh;
+}
+.section_inter{
     height: 100vh;
 }
