--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,16 @@
+/*Global*/
+html{
+    font-size: 62.5%;
+}
 *{
     border: 0;
     margin: 0;
     padding: 0;
     text-decoration: none;
+    box-sizing: border-box;
+}
+img{
+    max-width: 100%;
 }
 :root{
     --fuente:'Courier New', Courier, monospace;
@@ -11,6 +19,8 @@
     font-family: "fuente";
     src: url("/fonts/Kanit/Kanit.ttf");
 }
+
+/*---------------------Header------------------------*/
 
 .header_prinsipal{
     background-image: url(/img/header.jpg);
@@ -30,75 +40,74 @@
     align-items: center;
 }
 .contenedor_nav {
-    width: 20rem;
+    width: 30rem;
     display: flex;
     justify-content: space-between;
     font-family: 'fuente';
+    font-size: 1.6rem;
+}
+.contenedor_p{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .contenedor_nav a:hover{
     color: rgb(89, 179, 0); 
 }
-
-.nav{
-    width: 25%;
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    align-items: center;  
-    font-size: 1.1%;
-}
-.nav li:hover{
-    color: rgb(87, 174, 0);
-}
-a{
+.contenedor_nav a{
     color: white;
 }
 
-h1{
-    font-size: 2.5%;
-    font-family: Arial, Helvetica, sans-serif;
-}
 .texto_header{
-    font-size: 2%;
-    margin: 20% 4%;
-    line-height: 3%;
-}
-.titulo_nosotros{
+    color: white;
+    font-size: 3rem;
+    line-height: 4rem;
     font-family: var(--fuente);
+    margin:10rem 3rem;
+}
+
+/*----------------------------------------------------------------*/
+.titulo_nosotros{
+    font-family: 'fuente';
     text-align: center;
-    padding: 2%;
-    font-size: 1.5%;
+    padding: 2rem;
+    font-size: 2rem;
 }
 .nosotros{
-    width: 90%;
-    height: 84vh;
+    width: 90vw;
+    max-width: 90rem;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin: auto;
 }
 .article_nosotros{
-    width: 0%;
+    width: cal(33.3%-1rem);
     height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    margin: 0% 3%;
+    margin: 0rem 3rem;
     font-family: 'fuente';
 }
 .article_nosotros p{
-    line-height: 2%;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
 }
 
 .icono{
-    width: 7%;
+    width: 10rem;
 }
 .icono3{
-    width: 5%;
+    width: 7rem;
 }
 .section_depart{
-    width: 90%;
+    width: 90vw;
+    max-width: 90rem;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -106,35 +115,37 @@ h1{
 }
 .section_depart article{
     background-color: rgb(233, 233, 233);
-    width: 30%;
-    margin: 0% 2%;
+    width: 30vw;
+    max-width: 30rem;
+    margin: 0rem 2rem;
     height: 90vh;
     font-family: 'fuente';
 }
-
-.img_depart{
-    width: 70%;
-}
 .section_depart h2{
-    margin-left: 1%;
+    margin-left: 1rem;
 }
 
 .section_depart article p{
-    padding: 1%;
-    line-height: 2%;
+    padding: 1rem;
+    line-height: 2rem;
 }
 .iconos_depart{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
+.img_icono{
+    width: 3vw;
+    max-width: 3rem;
+}
 .section_depart article a{
     background-color: rgb(172, 138, 0);
     display: block;
     text-align: center;
-    width: 20vh;
-    padding: 0.5%;
-    margin: 2% auto;
+    width: 20vw;
+    max-width: 20rem;
+    padding: 0.5rem;
+    margin: 2rem auto;
 }
 .p_costo{
     color: rgb(0, 162, 0);
@@ -142,21 +153,22 @@ h1{
 .h1_depart{
     font-family: 'fuente';
     text-align: center;
-    margin-bottom: 1%;
-    font-size: 2%;
+    margin-bottom: 1rem;
+    font-size: 2rem;
 }
 main a:nth-child(2){
     background-color: rgb(36, 143, 1);
     display: block;
     float: right;
-    padding: 0.5% 1.5%;
-    margin-right: 5%;
-    margin-top: -3%;
+    padding: 0.5rem 1.5rem;
+    margin-right: 5rem;
+    margin-top: -3rem;
 }
 .header_inter{
     background-image: url(/img/encuentra.jpg);
-    background-size: contain;
-    height: 71.2vh;
+    background-size: cover;
+    background-position: center center;
+    height: 60vh;
 }
 .section_inter{
     height: 100vh;
