--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,121 +12,124 @@ html{
 img{
     max-width: 100%;
 }
-:root{
-    --fuente:'Courier New', Courier, monospace;
-}
-@font-face {
+@font-face { 
     font-family: "fuente";
     src: url("/fonts/Kanit/Kanit.ttf");
+}
+:root{
+    --fuente:'fuente';
+}
+@font-face {
+    font-family: "fuente2";
+    src: url("/fonts/Kanit/Kanit_light.ttf");
+}
+
+.dis_flex_b{
+    display: flex;
+    justify-content: space-between;
+}
+a{
+    color: rgb(255, 255, 255);
 }
 
 /*---------------------Header------------------------*/
 
-.header_prinsipal{
+.head_inicio{
     background-image: url(/img/header.jpg);
     height: 100vh;
     min-height: 50vh;
     background-position: center center;
     background-size: cover;  
+    color: rgb(255, 255, 255);
 }
-.contenedor_p{
-    max-width: 100rem;
+.contenedor_head{
+    width: 70vw;
+    max-width: 70vw;
     margin: 0 auto;
+    height: 100%;
+    flex-direction: column;
 }
-.contenedor_header{
+.contenedor_nav{
     padding: 2rem;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
 }
-.contenedor_nav {
+.contenedor_menu{
     width: 30rem;
-    display: flex;
-    justify-content: space-between;
     font-family: 'fuente';
     font-size: 1.6rem;
 }
-.contenedor_p{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+
 .contenedor_nav a:hover{
     color: rgb(89, 179, 0); 
 }
-.contenedor_nav a{
-    color: white;
-}
 
-.texto_header{
-    color: white;
+.text_head{
     font-size: 3rem;
     line-height: 4rem;
-    font-family: var(--fuente);
+    font-family: 'fuente2';
     margin:10rem 3rem;
 }
 
 /*----------------------------------------------------------------*/
-.titulo_nosotros{
-    font-family: 'fuente';
+/* n=section nosotros */
+.title_n{
+    font-family: var(--fuente);
     text-align: center;
     padding: 2rem;
-    font-size: 2rem;
+    font-size: 2rem; 
 }
-.nosotros{
-    width: 90vw;
-    max-width: 90rem;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
+.section_n{
+    width: 70vw;
+    max-width: 70vw;
+    height: 90vh;
+    max-height: 90vh;
     margin: auto;
 }
-.article_nosotros{
-    width: cal(33.3%-1rem);
+.article_n{
+    width: 33.3vw;
     height: 70vh;
-    display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     margin: 0rem 3rem;
-    font-family: 'fuente';
+    font-family: 'fuente2';
+    font-size: 1vw;
+    line-height: 4vh;
 }
-.article_nosotros p{
-    line-height: 2rem;
-    font-size: 1.5rem;
-    line-height: 2.5rem;
-}
-
-.icono{
-    width: 10rem;
+.icono_n{
+    width: 10vmax;
+    max-width: 10vmax;
 }
 .icono3{
-    width: 7rem;
-}
-.section_depart{
-    width: 90vw;
-    max-width: 90rem;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-}
-.section_depart article{
-    background-color: rgb(233, 233, 233);
-    width: 30vw;
-    max-width: 30rem;
-    margin: 0rem 2rem;
-    height: 90vh;
-    font-family: 'fuente';
-}
-.section_depart h2{
-    margin-left: 1rem;
+    width: 7vmax;
+    max-width: 7vmax;
 }
 
-.section_depart article p{
-    padding: 1rem;
+/*--------------------------------------------------------------*/
+.section_depart{
+    width: 70vw;
+    max-width: 70vw;
+    margin: 0 auto;
+}
+.contenedor_depart{
+    background-color: rgb(233, 233, 233);
+    width: 20vw;
+    flex-direction: column;
+    font-family: 'fuente';
+    padding-bottom: 1vh;
+    justify-content: center;
+    font-size: 1vw;
+}
+.article_depart{
+    width: 20vw;
+}
+.section_depart h2{
+    margin: 2rem 2rem 0rem 2rem;
+}
+
+.article_depart p{
+    padding: 1rem 2rem 1rem 2rem;
     line-height: 2rem;
 }
 .iconos_depart{
@@ -138,38 +141,62 @@ img{
     width: 3vw;
     max-width: 3rem;
 }
-.section_depart article a{
+.btn_d{
     background-color: rgb(172, 138, 0);
-    display: block;
+    display:block;
     text-align: center;
-    width: 20vw;
-    max-width: 20rem;
-    padding: 0.5rem;
-    margin: 2rem auto;
+    width: 17vw;
+    max-width: 17vw;
+    padding: 1vh;
+    margin: 1rem auto;
+    color: white;
+    font-size: 1.2vw;
 }
 .p_costo{
     color: rgb(0, 162, 0);
+    font-weight: 700;
+    font-size: 1.3rem;
 }
 .h1_depart{
     font-family: 'fuente';
     text-align: center;
-    margin-bottom: 1rem;
-    font-size: 2rem;
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
 }
-main a:nth-child(2){
+.btn_verde{
     background-color: rgb(36, 143, 1);
     display: block;
-    float: right;
-    padding: 0.5rem 1.5rem;
-    margin-right: 5rem;
-    margin-top: -3rem;
+    color: white;
+    width: 20vh;
+    text-align: center;
+    max-width: 20rem;
+    padding: 1rem 2rem;
+    font-size: 1.3rem;
 }
+.contenedor_btn_d{
+    width: 70vw;
+    max-width: 70vw;
+    margin: 2vw auto;
+    display: flex;
+    justify-content: flex-end;
+}
+/*-----------------------------------------------------------------*/
 .header_inter{
+    flex-direction: column;
+    font-size: 2rem;
+    height:45vh;
+    padding:5rem;
+    color: white;
+    font-family:'fuente2';
+}
+.btn_inter{
+    font-size: 1.5rem;
+    background-color: rgb(172, 138, 0);
+}
+.section_inter{
     background-image: url(/img/encuentra.jpg);
     background-size: cover;
     background-position: center center;
+    margin: 1rem auto;
     height: 60vh;
-}
-.section_inter{
-    height: 100vh;
 }
