--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,25 +117,27 @@ a{
     width: 20vw;
     flex-direction: column;
     font-family: 'fuente';
-    padding-bottom: 1vh;
+    padding-bottom: 2vh;
     justify-content: center;
     font-size: 1vw;
 }
 .article_depart{
     width: 20vw;
+    box-shadow: 0.3vw 0.3vw 0.5vw rgba(0, 0, 0, 0.46);
 }
 .section_depart h2{
     margin: 2rem 2rem 0rem 2rem;
 }
 
 .article_depart p{
-    padding: 1rem 2rem 1rem 2rem;
-    line-height: 2rem;
+    padding: 1vw 2vw 1vw 2vw;
+    line-height: 2vw;
 }
 .iconos_depart{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-bottom: 1vw;
 }
 .img_icono{
     width: 3vw;
@@ -147,7 +149,7 @@ a{
     text-align: center;
     width: 17vw;
     max-width: 17vw;
-    padding: 1vh;
+    padding: 1vh 1vh 1.4vh 1vh;
     margin: 1rem auto;
     color: white;
     font-size: 1.2vw;
@@ -155,7 +157,7 @@ a{
 .p_costo{
     color: rgb(0, 162, 0);
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1vw;
 }
 .h1_depart{
     font-family: 'fuente';
@@ -169,8 +171,8 @@ a{
     color: white;
     width: 20vh;
     text-align: center;
-    max-width: 20rem;
-    padding: 1rem 2rem;
+    max-width: 20vw;
+    padding: 1vw 2vw;
     font-size: 1.3rem;
 }
 .contenedor_btn_d{
@@ -199,4 +201,71 @@ a{
     background-position: center center;
     margin: 1rem auto;
     height: 60vh;
+}
+
+/*---------------------------------------------------*/
+.section_blog{
+    width: 70vw;
+    max-width: 70vw;
+    margin: 0 auto;
+    font-family: 'fuente';
+    margin-bottom: 5vw;
+}
+.h2_blog{
+    text-align: center;
+    font-family: 'fuente';
+    font-size: 1.5vw;
+    padding: 1vw;
+}
+.contenedor_blog img{
+    width: 20vw;
+    border-radius: 0.3vw;
+}
+.article_blog{
+    margin-bottom: 1vw;
+}
+.blog_p{
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1vw;
+    line-height: 2vw;
+}
+.blog_p h2{
+    padding: 0rem 1rem;
+}
+.blog_p p{
+    padding: 1rem;
+}
+.contenedor_test article{
+    background-color: violet;
+    border-radius: 0.5vw;
+    width: 25vw;
+    font-size: 2vw;
+    padding: 2vw 2vw 2vw 1.5vw;
+    align-items: flex-start;
+    font-family: 'fuente2';
+    margin-top: 3vw;
+}
+.contenedor_test img{
+    float: left;
+    width: 5vw;
+    max-width: 5vw;
+}
+.p_test{
+    margin-top: 1vw;
+}
+.autor_test{
+    display: block;
+    margin-top: 1vw;
+    text-align: right;
+    font-size: 1.2vw;
+}
+.footer_prinsipal{
+    background-color: rgb(55, 55, 55);
+    height: 10vh;
+    color: white;
+    font-size: 1.3vw;
+    text-align: center;
+    padding: 3vh;
+    font-family: 'fuente2';
 }
