--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-/*Global*/
 html{
     font-size: 62.5%;
 }
@@ -28,23 +27,28 @@ img{
     display: flex;
     justify-content: space-between;
 }
-a{
+.color_white, a{
     color: rgb(255, 255, 255);
 }
-
+.section{
+    width: 70vw;
+    max-width: 70vw;
+}
 /*---------------------Header------------------------*/
-
+.menu_header{
+    background-color: rgb(77, 77, 77);
+    align-items: center;
+    justify-content: space-evenly;
+    height: 15vh;
+}
 .head_inicio{
     background-image: url(/img/header.jpg);
     height: 100vh;
     min-height: 50vh;
     background-position: center center;
     background-size: cover;  
-    color: rgb(255, 255, 255);
 }
 .contenedor_head{
-    width: 70vw;
-    max-width: 70vw;
     margin: 0 auto;
     height: 100%;
     flex-direction: column;
@@ -59,7 +63,7 @@ a{
     font-size: 1.6rem;
 }
 
-.contenedor_nav a:hover{
+.contenedor_menu a:hover{
     color: rgb(89, 179, 0); 
 }
 
@@ -75,14 +79,12 @@ a{
 .title_n{
     font-family: var(--fuente);
     text-align: center;
-    padding: 2rem;
+    padding: 5rem 2rem 2rem 2rem;
     font-size: 2rem; 
 }
 .section_n{
-    width: 70vw;
-    max-width: 70vw;
-    height: 90vh;
-    max-height: 90vh;
+    height: 85vh;
+    max-height: 85vh;
     margin: auto;
 }
 .article_n{
@@ -95,7 +97,7 @@ a{
     margin: 0rem 3rem;
     font-family: 'fuente2';
     font-size: 1vw;
-    line-height: 4vh;
+    line-height: 2vw;
 }
 .icono_n{
     width: 10vmax;
@@ -105,11 +107,8 @@ a{
     width: 7vmax;
     max-width: 7vmax;
 }
-
 /*--------------------------------------------------------------*/
 .section_depart{
-    width: 70vw;
-    max-width: 70vw;
     margin: 0 auto;
 }
 .contenedor_depart{
@@ -151,7 +150,6 @@ a{
     max-width: 17vw;
     padding: 1vh 1vh 1.4vh 1vh;
     margin: 1rem auto;
-    color: white;
     font-size: 1.2vw;
 }
 .p_costo{
@@ -168,7 +166,6 @@ a{
 .btn_verde{
     background-color: rgb(36, 143, 1);
     display: block;
-    color: white;
     width: 20vh;
     text-align: center;
     max-width: 20vw;
@@ -176,8 +173,6 @@ a{
     font-size: 1.3rem;
 }
 .contenedor_btn_d{
-    width: 70vw;
-    max-width: 70vw;
     margin: 2vw auto;
     display: flex;
     justify-content: flex-end;
@@ -188,7 +183,6 @@ a{
     font-size: 2rem;
     height:45vh;
     padding:5rem;
-    color: white;
     font-family:'fuente2';
 }
 .btn_inter{
@@ -202,11 +196,8 @@ a{
     margin: 1rem auto;
     height: 60vh;
 }
-
 /*---------------------------------------------------*/
 .section_blog{
-    width: 70vw;
-    max-width: 70vw;
     margin: 0 auto;
     font-family: 'fuente';
     margin-bottom: 5vw;
@@ -263,9 +254,33 @@ a{
 .footer_prinsipal{
     background-color: rgb(55, 55, 55);
     height: 10vh;
-    color: white;
     font-size: 1.3vw;
     text-align: center;
     padding: 3vh;
     font-family: 'fuente2';
+    align-items: center;
+}
+main{
+    font-family: 'fuente';
+    padding-bottom: 17vh;
+    margin: 0 auto;
+}
+main h1{
+    text-align: center;
+    font-size: 2vw;
+}
+.contenedor_nosotros{
+    margin: 3vw auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 3vw;
+}
+.contenedor_nosotros img{
+    border-radius: 0.3vw;
+}
+.contenedor_nosotros p{
+    font-size: 1vw;
+    font-family: 'fuente2';
+    padding-top: 1vh;
+    line-height: 2vw;
 }
