--- a/css/estilos.css
+++ b/css/estilos.css
@@ -224,12 +224,11 @@ img{
     justify-content: center;
     font-size: 1vw;
     line-height: 2vw;
+    width: 80%;
+    padding: 1rem;
 }
 .blog_p h2{
     padding: 0rem 1rem;
-}
-.blog_p p{
-    padding: 1rem;
 }
 .contenedor_test article{
     background-color: violet;
